fix – card spacing and alignment of fancyLink on mobile

--- a/src/scss/_extend.scss
+++ b/src/scss/_extend.scss
@@ -152,7 +152,7 @@
   text-decoration: none;
   position: relative;
   display: inline-block;
-  margin: calc($spacer * 0.5) $spacer calc($spacer * 0.5) 0;
+  margin: calc($spacer * 0.5) 0;
   padding: 0 0 0.5rem 0;
   // display: flex;
   // flex-direction: row;
@@ -161,7 +161,7 @@
   // font-style: italic;
   font-weight: $font-weight-bold;
   letter-spacing: 0.01rem;
-  text-align: rileght;
+  // text-align: right;
   color: $utsmokey;
   // &:first-letter {
   //   color: $utlinkriver;
